--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,8 +1,8 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: adaptive_mooclet_lti/wsgi.py
+    WSGIPath: mooclet_engine_app/wsgi.py
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: adaptive_mooclet_lti.settings.base
+    DJANGO_SETTINGS_MODULE: mooclet_engine_app.settings.aws
 
 packages:
   yum:
@@ -21,5 +21,5 @@ container_commands:
     command: "django-admin.py migrate"
     leader_only: true
   03_loaddata:
-    command: "django-admin.py loaddata variables policies mooclet_types mooclets quizzes questions values templates"
+    command: "django-admin.py loaddata policy"
     leader_only: true
