--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -1,7 +1,7 @@
 # local environment requirements
 
-#includes the base.txt requirements needed in all environments
--r requirements.txt
+#includes the base requirements needed in all environments
+-r requirements_base.txt
 
 # below are requirements specific to the local environment
 django-sslserver
