Update secure settings file example

--- a/mooclet_engine_app/settings/secure.py.example
+++ b/mooclet_engine_app/settings/secure.py.example
@@ -7,30 +7,36 @@ Note - the .gitignore file is setup to exclude secure.py
 from git. secure.py should never be put under version control.
 
 '''
-SECURE_SETTINGS = {
-	# database info
-	'db_name': '',
-	'db_user': '',
-	'db_pass': '',
-	'db_host': '',
-	'db_port': 5432,
 
-	# django secret key
-	'SECRET_KEY': "",
+import os
 
-	# LTI credentials
-	'LTI_OAUTH_CREDENTIALS': {
-		'': '',
-	},
+os.environ.setdefault('ENV_TYPE', 'test')
 
-	# qualtrics-related settings
-	'qualtrics_base_url':'',
-	'qualtrics_user':'',
-	'qualtrics_api_token':'',
+# django secret key
+SECRET_KEY = "",
 
-
-	# amazon S3 credentials for static file storage
-	'AWS_STORAGE_BUCKET_NAME':'',
-	'AWS_S3_ACCESS_KEY_ID': '',
-	'AWS_SECRET_ACCESS_KEY': '',
+MOOCLET_URL_BASE = {
+    'local': 'http://localhost:8000/moocletengine/api',
+    'test': 'https:///example.com/moocletengine/api',
 }
+
+AWS_DATABASE = {
+    'test': {
+        'ENGINE': 'django.db.backends.postgresql',
+        'NAME': 'dbname',
+        'USER': 'dbuser',
+        'PASSWORD': 'dbpass',
+        'HOST': 'xxx.us-east-1.rds.amazonaws.com',
+        'PORT': 5432,
+    }
+}
+
+ALLOWED_HOSTS = {
+    'test': ['example.com'],
+    'local': [],
+}
+
+# credentials for app-mooclet-engine IAM user
+AWS_S3_ACCESS_KEY_ID = 'xxx'
+AWS_SECRET_ACCESS_KEY = 'xxx'
+AWS_STORAGE_BUCKET_NAME = 'my-bucket-name'
