Move project to repo subfolder

--- a/mooclet_engine/.ebextensions/django.config
+++ b/mooclet_engine/.ebextensions/django.config
@@ -20,6 +20,9 @@ container_commands:
   02_migrate:
     command: "django-admin.py migrate"
     leader_only: true
+  02a_migrate_celery:
+    command: "django-admin.py migrate django_celery_results"
+    leader_only: true
   03_loaddata:
     command: "django-admin.py loaddata policy"
     leader_only: true
