Fixes for AWS deployment

--- a/mooclet_engine/.ebextensions/django.config
+++ b/mooclet_engine/.ebextensions/django.config
@@ -1,8 +1,8 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: mooclet_engine_app/wsgi.py
+    WSGIPath: mooclet_engine/wsgi.py
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: mooclet_engine_app.settings.aws
+    DJANGO_SETTINGS_MODULE: mooclet_engine.settings.aws
 
 packages:
   yum:
@@ -20,9 +20,11 @@ container_commands:
   02_migrate:
     command: "django-admin.py migrate"
     leader_only: true
-  02a_migrate_celery:
-    command: "django-admin.py migrate django_celery_results"
-    leader_only: true
+#  02a_migrate_celery:
+#    command: "django-admin.py migrate django_celery_results"
+#    leader_only: true
   03_loaddata:
-    command: "django-admin.py loaddata policy"
+    command: "django-admin.py loaddata policy environment"
     leader_only: true
+  04wsgipass:
+    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
