Include R and R packages

--- a/mooclet_engine/.ebextensions/django.config
+++ b/mooclet_engine/.ebextensions/django.config
@@ -21,12 +21,17 @@ packages:
     libpng-devel: []
     freetype-devel: []
     zlib-devel: []
+    readline-devel: []
+    R: [3.3.3]
 
 container_commands:
-  01_migrate:
+  01_R_packages:
+    command: "Rscript requirements.R"
+    ignoreErrors: false
+  02_migrate:
     command: "django-admin.py migrate"
     leader_only: true
-  02_loaddata:
+  03_loaddata:
     command: "django-admin.py loaddata policy"
     leader_only: true
   04_pip_upgrade:
