update API to use SlugFields, minor fixes

--- a/mooclet_engine/.ebextensions/django.config
+++ b/mooclet_engine/.ebextensions/django.config
@@ -27,4 +27,4 @@ container_commands:
     command: "django-admin.py loaddata policy environment"
     leader_only: true
   04wsgipass:
-    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
+    command: "if ! grep -q 'WSGIPassAuthorization On' ../wsgi.conf ; then echo 'WSGIPassAuthorization On' >> ../wsgi.conf; fi;"
