improve celery support

--- a/mooclet_engine/.ebextensions/django.config
+++ b/mooclet_engine/.ebextensions/django.config
@@ -13,7 +13,8 @@ packages:
     libxslt-devel: []
     postgresql94-devel: []
     libcurl-devel: []
-    openssl: []
+    gcc: []
+    gcc-c++: []
 
 container_commands:
   01_upgrade_pip_global:
