--- a/mooclet_engine/.ebextensions/django.config
+++ b/mooclet_engine/.ebextensions/django.config
@@ -15,6 +15,8 @@ packages:
     libcurl-devel: []
     gcc: []
     gcc-c++: []
+    atlas-sse3-devel: []
+    lapack-devel: []
 
 container_commands:
   01_upgrade_pip_global:
