--- a/mooclet_engine/.ebextensions/celery_config.config
+++ b/mooclet_engine/.ebextensions/celery_config.config
@@ -5,6 +5,8 @@ files:
     group: root
     content: |
       #!/usr/bin/env bash
+      
+      set -x
 
       # Create required directories
       sudo mkdir -p /var/log/celery/
@@ -94,14 +96,14 @@ files:
       fi
 
       # Reread the supervisord config
-      supervisorctl -c /opt/python/etc/supervisord.conf reread
+      /usr/local/bin/supervisorctl -c /opt/python/etc/supervisord.conf reread
 
       # Update supervisord in cache without restarting all services
-      supervisorctl -c /opt/python/etc/supervisord.conf update
+      /usr/local/bin/supervisorctl -c /opt/python/etc/supervisord.conf update
 
       # Start/Restart celeryd through supervisord
-      supervisorctl -c /opt/python/etc/supervisord.conf restart celeryd
-      supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat
+      /usr/local/bin/supervisorctl -c /opt/python/etc/supervisord.conf restart celeryd
+      /usr/local/bin/supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat
       
       
       
@@ -110,5 +112,5 @@ commands:
     command: "ps auxww | grep 'celery beat' | awk '{print $2}' | sudo xargs kill -9 || true"
     ignoreErrors: true
   02_restartbeat:
-    command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
+    command: "/usr/local/bin/supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
     leader_only: true
